Fixes to theme, small spacing issues

--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -9,7 +9,7 @@
 	}
 
 	.ecombasket-pull {
-		width: auto;	
+		width: auto;
 		.basket-count, p {
 			font-weight: 700;
 		}
@@ -83,13 +83,13 @@
 					@media only screen and (max-width : 460px) {
 						width: 60px;
 						height: 60px;
-					} 
+					}
 				}
 				.ecombasket-item-info {
 					margin-left: 120px;
 					@media only screen and (max-width : 460px) {
 						margin-left: 75px;
-					} 
+					}
 
 					.ecombasket-item-title {
 						display: block;
@@ -130,13 +130,13 @@
 			float: left;
 			@media only screen and (max-width : 460px) {
 				float: none;
-			} 
+			}
 			p {
 				font-size: (@font-swatch5-font-size * 1.12);
 				line-height: @font-swatch7-line-height;
 				@media only screen and (max-width : 460px) {
 					font-size: (@font-swatch5-font-size * 1);
-				} 
+				}
 
 				.ecombasket-total {
 
@@ -148,13 +148,13 @@
 			margin: 0;
 			@media only screen and (max-width : 460px) {
 				float: none;
-			} 
+			}
 		}
 	}
 }
 
 
-// ============================================================================================================================== 
+// ==============================================================================================================================
 // Widget: e-com Product List
 @bp-product-detail-compact: ~"only screen and (max-width : 1130px)";
 
@@ -176,14 +176,14 @@
 		// Filter
 		.productlist-filter {
 			margin-left: 0;
-			
-			
+
+
 
 			.productlist-display-form {
 				.clearfix;
 				margin-bottom: (@w-spacing * 0.3);
 				text-align: center;
-				
+
 
 				// Filter Group
 				.form-group {
@@ -197,7 +197,7 @@
 					&:nth-child(4) {
 						margin-right: 0;
 					}
-					
+
 					@media @mobile {
 						display: block;
 						margin-bottom: 10px;
@@ -228,7 +228,7 @@
 					select {
 						display: block;
 						width: 100%;
-	                   
+
 	                }
 	                // Search form
 	                &.productlist-search {
@@ -270,7 +270,7 @@
 					    -ms-flex-align: center;
 					    align-items: center;
 
-					 
+
 
 					    @media @bp-product-detail-compact {
 							float: none;
@@ -300,11 +300,11 @@
 						    flex: 1 1 auto;
 						    -webkit-align-self: auto;
 						    -ms-flex-item-align: auto;
-						    align-self: auto;	
+						    align-self: auto;
 						    @media @mobile {
 						    	width: 100%;
 						    	margin-right: 0;
-						    }	                		
+						    }
 	                	}
 	                	button {
 	                		// Flex
@@ -323,7 +323,7 @@
 						    align-self: auto;
 						    @media @mobile {
 						    	margin-top: 5px;
-						    }	                		
+						    }
 	                	}
 	                }
 				}
@@ -353,7 +353,7 @@
 				}
 			}
 		}
-		
+
 		// -------------------------------------------------------------------------------------------------------------------------
 		// Product Item
 		.ecom-productslist-product {
@@ -367,7 +367,7 @@
 			padding: 0;
 			text-align: left;
 			display: block;
-			float: left;		
+			float: left;
 
 			&:nth-child(3n+4) {
 				margin-right: 0;
@@ -474,7 +474,7 @@
 				display: inline-block;
 				background: lighten(@color-swatch1, 15%);
 				color: @color-swatch5;
-				
+
 				font-size: (@font-swatch5-font-size * 1);
 				line-height: (@font-swatch5-line-height * 1);
 				@media @tablet {
@@ -494,7 +494,7 @@
 .widget.ecomcategorieslist {
 	.block-widget;
 	.w_vertical_spacing;
-	
+
 	.clearfix;
 	ul.product-category-items {
 		margin: 0;
@@ -587,7 +587,7 @@
 	clear: none;
 	.block-widget;
 	.clearfix;
-	
+
 
 	.ecom-product {
 		// Images
@@ -597,9 +597,9 @@
 			.w_horizontal_spacing;
 			background: lighten(@color-swatch1, 15%);
 			padding-bottom: 0 !important;
-			
+
 			display: block;
-			
+
 
 
 			.ecom-product-preview-image-wrap {
@@ -651,11 +651,11 @@
 
 		// Product info
 		.ecom-product-info {
-			
-			
-			
 
-			
+
+
+
+
 
 			// Title
 			.ecom-product-title {
@@ -663,7 +663,7 @@
 			}
 			// Price
 			.ecom-product-price {
-				
+
 			}
 			// Variations
 			.ecom-product-variation {
@@ -671,8 +671,6 @@
 				// Label
 				.ecom-product-vartitle {
 					display: block;
-				}
-				select {
 				}
 			}
 			// Add to cart
@@ -728,7 +726,7 @@
 				.ecom-product-category {
 					margin-bottom: 0.5em;
 					.store-category-link {
-						
+
 					}
 				}
 				.ecom-product-tag {
@@ -779,7 +777,7 @@
 	.empty-info {
 		margin-left: 0;
 	}
-	
+
 	.ecom-featuredproducts-header {
 		margin-left: 0;
 		h2 {
@@ -790,7 +788,7 @@
 
 	// Products
 	.ecom-featuredproducts-wrap {
-		
+
 		.clearfix;
 
 		// 2 products versions, span across entire width
@@ -868,7 +866,7 @@
 				height: 250px;
 				background-position: -1000px;
 				padding: 30px;
-				
+
 				// Flex
 				display: -webkit-box;
 			    display: -moz-box;
@@ -898,7 +896,7 @@
 			    -webkit-align-items: center;
 			    -ms-flex-align: center;
 			    align-items: center;
-				
+
 				@media @mobile {
 					padding: 16px;
 					height: auto;
@@ -937,7 +935,7 @@
 					display: inline-block;
 					background: lighten(@color-swatch1, 15%);
 					color: @color-swatch5;
-					
+
 					font-size: (@font-swatch5-font-size * 1);
 					line-height: (@font-swatch5-line-height * 1);
 					@media @tablet {
@@ -963,7 +961,7 @@
 	.block-widget;
 	// Title
 	.basket-summary-title {
-		
+
 	}
 
 	// Empty basket
@@ -998,7 +996,7 @@
 					padding: 10px 0 0 0;
 				}
 			}
-			
+
 			th.basket-summary-amount-column {
 				text-align: right;
 			}
@@ -1010,7 +1008,7 @@
 				display: none;
 			}
 			th {
-				border-bottom: 1px solid fade(@color-swatch5, 20%);			
+				border-bottom: 1px solid fade(@color-swatch5, 20%);
 			}
 		}
 		// Item
